src/Base/main/default/objects/Legend_Inspection__c/Legend_Inspection__c.object-meta.xml
<CustomObject>
    <description>Digital Inspection Sheets.

-Retail Inspection Sheet
-Service Walkaround Inspection</description>
    <label>Legend Inspection</label>
    <nameField>
        <label>Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legend Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>