src/Base/main/default/objects/Legend_Inspection__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legend Inspections</relationshipLabel>
    <relationshipName>Legend_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>