src/Base/main/default/objects/Legend_Inspection__c/fields/All_Options_on_Boat_as_per_Invoice__c.field-meta.xml
<CustomField>
    <fullName>All_Options_on_Boat_as_per_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Options on Boat as per Invoice?</label>
    <type>Checkbox</type>
</CustomField>