src/Base/main/default/objects/Legend_Inspection__c/fields/Are_all_Serial_Numbers_Correct__c.field-meta.xml
<CustomField>
    <fullName>Are_all_Serial_Numbers_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are all Serial Numbers Correct?</label>
    <type>Checkbox</type>
</CustomField>