src/Base/main/default/objects/Legend_Inspection__c/fields/Battery__c.field-meta.xml
<CustomField>
    <fullName>Battery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Battery</label>
    <type>Checkbox</type>
</CustomField>