src/Base/main/default/objects/Legend_Inspection__c/fields/Battery_Qty__c.field-meta.xml
<CustomField>
    <fullName>Battery_Qty__c</fullName>
    <label>Battery Qty</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>