src/Base/main/default/objects/Legend_Inspection__c/fields/Blue_Drybag_In_Boat_with_Relevant_Manual__c.field-meta.xml
<CustomField>
    <fullName>Blue_Drybag_In_Boat_with_Relevant_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blue Drybag In Boat with Relevant Manual</label>
    <type>Checkbox</type>
</CustomField>