src/Base/main/default/objects/Legend_Inspection__c/fields/Boat_Electrical_Checked__c.field-meta.xml
<CustomField>
    <fullName>Boat_Electrical_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boat Electrical Checked?</label>
    <type>Checkbox</type>
</CustomField>