src/Base/main/default/objects/Legend_Inspection__c/fields/Boat_Numbers_Installed__c.field-meta.xml
<CustomField>
    <fullName>Boat_Numbers_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boat Numbers Installed</label>
    <type>Checkbox</type>
</CustomField>