src/Base/main/default/objects/Legend_Inspection__c/fields/Boat_Package_Appearance_Acceptable__c.field-meta.xml
<CustomField>
    <fullName>Boat_Package_Appearance_Acceptable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boat Package Appearance Acceptable?</label>
    <type>Checkbox</type>
</CustomField>