src/Base/main/default/objects/Legend_Inspection__c/fields/Boat_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Boat_Serial_Number__c</fullName>
    <formula>ERP_Order__r.Serial_Number__r.Name</formula>
    <label>Boat Serial Number</label>
    <type>Text</type>
</CustomField>