src/Base/main/default/objects/Legend_Inspection__c/fields/Canvas_Fitment_OK__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Fitment_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canvas Fitment OK?</label>
    <type>Checkbox</type>
</CustomField>