src/Base/main/default/objects/Legend_Inspection__c/fields/Check_for_Alternate_ERPs__c.field-meta.xml
<CustomField>
    <fullName>Check_for_Alternate_ERPs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check for Alternate ERPs</label>
    <type>Checkbox</type>
</CustomField>