src/Base/main/default/objects/Legend_Inspection__c/fields/Compartments_Cleaned__c.field-meta.xml
<CustomField>
    <fullName>Compartments_Cleaned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compartments Cleaned?</label>
    <type>Checkbox</type>
</CustomField>