src/Base/main/default/objects/Legend_Inspection__c/fields/Complains_Notes__c.field-meta.xml
<CustomField>
    <fullName>Complains_Notes__c</fullName>
    <label>Complains &amp; Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>