src/Base/main/default/objects/Legend_Inspection__c/fields/Coupler_Pin_Functioning__c.field-meta.xml
<CustomField>
    <fullName>Coupler_Pin_Functioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coupler &amp; Pin Functioning?</label>
    <type>Checkbox</type>
</CustomField>