src/Base/main/default/objects/Legend_Inspection__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>ERP_Order__r.AcctSeed__Account__r.FirstName + &quot; &quot; +  ERP_Order__r.AcctSeed__Account__r.LastName</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>