src/Base/main/default/objects/Legend_Inspection__c/fields/Deficiencies__c.field-meta.xml
<CustomField>
    <fullName>Deficiencies__c</fullName>
    <label>Deficiencies</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>