src/Base/main/default/objects/Legend_Inspection__c/fields/Doors_Windows_Gates_Checked__c.field-meta.xml
<CustomField>
    <fullName>Doors_Windows_Gates_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doors, Windows &amp; Gates Checked?</label>
    <type>Checkbox</type>
</CustomField>