src/Base/main/default/objects/Legend_Inspection__c/fields/Enclosure__c.field-meta.xml
<CustomField>
    <fullName>Enclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enclosure</label>
    <type>Checkbox</type>
</CustomField>