src/Base/main/default/objects/Legend_Inspection__c/fields/Engine_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Engine_Serial_Number__c</fullName>
    <label>Engine Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>