src/Base/main/default/objects/Legend_Inspection__c/fields/ERP_Order__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP Order</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Legend Inspections</relationshipLabel>
    <relationshipName>Legend_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>