src/Base/main/default/objects/Legend_Inspection__c/fields/Fuel_Tank__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Tank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Tank</label>
    <type>Checkbox</type>
</CustomField>