src/Base/main/default/objects/Legend_Inspection__c/fields/Fuel_Tank_Qty__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Tank_Qty__c</fullName>
    <label>Fuel Tank Qty</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>