src/Base/main/default/objects/Legend_Inspection__c/fields/HP__c.field-meta.xml
<CustomField>
    <fullName>HP__c</fullName>
    <label>HP</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>