src/Base/main/default/objects/Legend_Inspection__c/fields/Key_in_Ignition__c.field-meta.xml
<CustomField>
    <fullName>Key_in_Ignition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key in Ignition</label>
    <type>Checkbox</type>
</CustomField>