src/Base/main/default/objects/Legend_Inspection__c/fields/License_Plate_Mounted__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_Mounted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Plate Mounted</label>
    <type>Checkbox</type>
</CustomField>