src/Base/main/default/objects/Legend_Inspection__c/fields/License_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_Number__c</fullName>
    <formula>ERP_Order__r.License_Plate_erp__c</formula>
    <label>License Plate Number</label>
    <type>Text</type>
</CustomField>