src/Base/main/default/objects/Legend_Inspection__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <formula>ERP_Order__r.Serial_Number__r.GMBLASERP__Product__r.Make__c</formula>
    <label>Make</label>
    <type>Text</type>
</CustomField>