src/Base/main/default/objects/Legend_Inspection__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>ERP_Order__r.Serial_Number__r.Product_Name__c</formula>
    <label>Model</label>
    <type>Text</type>
</CustomField>