src/Base/main/default/objects/Legend_Inspection__c/fields/Motor_Locks__c.field-meta.xml
<CustomField>
    <fullName>Motor_Locks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motor Locks</label>
    <type>Checkbox</type>
</CustomField>