src/Base/main/default/objects/Legend_Inspection__c/fields/Motor_Trimmed__c.field-meta.xml
<CustomField>
    <fullName>Motor_Trimmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motor Trimmed</label>
    <type>Checkbox</type>
</CustomField>