src/Base/main/default/objects/Legend_Inspection__c/fields/Mounting_Hole__c.field-meta.xml
<CustomField>
    <fullName>Mounting_Hole__c</fullName>
    <label>Mounting Hole</label>
    <length>80</length>
    <type>Text</type>
</CustomField>