src/Base/main/default/objects/Legend_Inspection__c/fields/Orientation_Checklist_Completed__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Checklist_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orientation Checklist Completed?</label>
    <type>Checkbox</type>
</CustomField>