src/Base/main/default/objects/Legend_Inspection__c/fields/Other_Serial_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Other_Serial_Numbers__c</fullName>
    <label>Other Serial Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>