src/Base/main/default/objects/Legend_Inspection__c/fields/Pitch_of_Prop__c.field-meta.xml
<CustomField>
    <fullName>Pitch_of_Prop__c</fullName>
    <label>Pitch of Prop</label>
    <length>80</length>
    <type>Text</type>
</CustomField>