src/Base/main/default/objects/Legend_Inspection__c/fields/Pontoon_Brake_Lockout_Removed__c.field-meta.xml
<CustomField>
    <fullName>Pontoon_Brake_Lockout_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pontoon Brake Lockout Removed?</label>
    <type>Checkbox</type>
</CustomField>