src/Base/main/default/objects/Legend_Inspection__c/fields/Prop_Damage__c.field-meta.xml
<CustomField>
    <fullName>Prop_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prop Damage</label>
    <type>Checkbox</type>
</CustomField>