src/Base/main/default/objects/Legend_Inspection__c/fields/Remove_all_Personal_Contents__c.field-meta.xml
<CustomField>
    <fullName>Remove_all_Personal_Contents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove all Personal Contents</label>
    <type>Checkbox</type>
</CustomField>