src/Base/main/default/objects/Legend_Inspection__c/fields/Remove_Boat_Plug__c.field-meta.xml
<CustomField>
    <fullName>Remove_Boat_Plug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Boat Plug</label>
    <type>Checkbox</type>
</CustomField>