src/Base/main/default/objects/Legend_Inspection__c/fields/Skeg_Damage__c.field-meta.xml
<CustomField>
    <fullName>Skeg_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skeg Damage</label>
    <type>Checkbox</type>
</CustomField>