src/Base/main/default/objects/Legend_Inspection__c/fields/Spare_Tire__c.field-meta.xml
<CustomField>
    <fullName>Spare_Tire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spare Tire</label>
    <type>Checkbox</type>
</CustomField>