src/Base/main/default/objects/Legend_Inspection__c/fields/Tail_Light_Damage__c.field-meta.xml
<CustomField>
    <fullName>Tail_Light_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tail Light Damage</label>
    <type>Checkbox</type>
</CustomField>