src/Base/main/default/objects/Legend_Inspection__c/fields/Tie_Downs_Installed__c.field-meta.xml
<CustomField>
    <fullName>Tie_Downs_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tie Downs Installed?</label>
    <type>Checkbox</type>
</CustomField>