src/Base/main/default/objects/Legend_Inspection__c/fields/Tire_Pressure_to_Spec__c.field-meta.xml
<CustomField>
    <fullName>Tire_Pressure_to_Spec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tire Pressure to Spec?</label>
    <type>Checkbox</type>
</CustomField>