src/Base/main/default/objects/Legend_Inspection__c/fields/Trailer_Condition__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Condition__c</fullName>
    <label>Trailer Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>