src/Base/main/default/objects/Legend_Inspection__c/fields/Trailer_Light_Check__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Light_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trailer Light Check?</label>
    <type>Checkbox</type>
</CustomField>