src/Base/main/default/objects/Legend_Inspection__c/fields/Trailer_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Serial_Number__c</fullName>
    <label>Trailer Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>