src/Base/main/default/objects/Legend_Inspection__c/fields/Travel_Cover__c.field-meta.xml
<CustomField>
    <fullName>Travel_Cover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Cover</label>
    <type>Checkbox</type>
</CustomField>