src/Base/main/default/objects/Legend_Inspection__c/fields/Trolling_Motor__c.field-meta.xml
<CustomField>
    <fullName>Trolling_Motor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trolling Motor</label>
    <type>Checkbox</type>
</CustomField>