src/Base/main/default/objects/Legend_Inspection__c/fields/Water_Tested__c.field-meta.xml
<CustomField>
    <fullName>Water_Tested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Tested?</label>
    <type>Checkbox</type>
</CustomField>