src/Base/main/default/objects/Legend_Inspection__c/fields/Wheel_Torqued__c.field-meta.xml
<CustomField>
    <fullName>Wheel_Torqued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wheel Torqued?</label>
    <type>Checkbox</type>
</CustomField>