src/Base/main/default/objects/Legend_Inspection__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>ERP_Order__r.Serial_Number__r.Model_Year__c</formula>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>