src/Base/main/default/objects/Legend_Inspection__c/recordTypes/Boat_Specialist_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Boat_Specialist_Inspection</fullName>
    <active>true</active>
    <label>Boat Specialist Inspection</label>
</RecordType>