src/Base/main/default/objects/Legend_Inspection__c/recordTypes/Inspector_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Inspector_Inspection</fullName>
    <active>true</active>
    <label>Inspector Inspection</label>
</RecordType>