src/Base/main/default/objects/Legend_Inspection__c/recordTypes/Memory_Maker_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Memory_Maker_Inspection</fullName>
    <active>true</active>
    <label>Memory Maker Inspection</label>
</RecordType>