src/Base/main/default/objects/Legend_Inspection__c/recordTypes/Retail_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Retail_Inspection</fullName>
    <active>true</active>
    <label>Retail Inspection</label>
</RecordType>