src/Base/main/default/objects/Legend_Inspection__c/recordTypes/Service_Walkaround.recordType-meta.xml
<RecordType>
    <fullName>Service_Walkaround</fullName>
    <active>true</active>
    <label>Service Walkaround</label>
</RecordType>