src/Base/main/default/objects/Legend_Inspection__c/recordTypes/Technician_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Technician_Inspection</fullName>
    <active>true</active>
    <label>Technician Inspection</label>
</RecordType>